// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui:create:atomic when using an existing pageId (--pageId flag specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "1YlrWbKI6kgpcX/5spCmIko0kgg=",
      "name": "deployment.esbuild.mjs",
    },
    HashedFile {
      "hash": "+t+HILvU+0OvGuKuRvbcamfBMRw=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [],
      "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "KwR4eJKGc+ZXRbIX4Jhn40THSpI=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "2WXM24xZscVOUHVUti5Z8stWW2A=",
                  "name": "template-1.html",
                },
              ],
              "hash": "HghfGR6Ktv9oQs8WZP2zA+IjlgE=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "sWUDtgn9DiTjvYlLdoF4EaGoClw=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "pPdA06Q+ujtEyI7kflypbd5kiUg=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "uNaVrxKWu4DcnVJTCz+9hVGWQ2Q=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "lIIVFoYP+9d6H0rrdSp9lYPxeWw=",
              "name": "sample-result-component",
            },
          ],
          "hash": "ApFF74n5JpLwWNDx/OdGzyfLNlg=",
          "name": "components",
        },
        HashedFile {
          "hash": "2/Ssowtzkh/hx4e9vrMi11FFp1Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "/MC1IvlmPW0zAgfo82n8CnBDMrA=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "dIKI3aRn/2K6aO5RgC2zfGQ2wg8=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "DNqsZ2yreeiGoZvrcGiMgZGDS8k=",
              "name": "index.css",
            },
          ],
          "hash": "tQ5KnNFyuknGwWoF87lH5Iv26pc=",
          "name": "style",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "Yhwg1zaohXJmi0xJFywAlsL02ZA=",
              "name": "atomic.ts",
            },
          ],
          "hash": "ZyOIYW/4w45sOzwmwIaFevE1VVM=",
          "name": "utils",
        },
      ],
      "hash": "pdxbUpY5KiZ3MGOUP8EDlTMHT+w=",
      "name": "src",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "DAG8s9TW9ytbY3qpmV11XKI19DY=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using an existing pageId (using the list prompt of available pages) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "bBk6DoprMUqcw8a48oUQpkyFxkE=",
      "name": "deployment.esbuild.mjs",
    },
    HashedFile {
      "hash": "+t+HILvU+0OvGuKuRvbcamfBMRw=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "dZCPeiAxqOaVVtRsZz+MidfshDs=",
          "name": "clean-up.js",
        },
        HashedFile {
          "hash": "SPggJ4gGqtRc5+8WHpeKd/gQcf0=",
          "name": "utils.js",
        },
      ],
      "hash": "UEgD2PjQu6qgn3nWQVaFnfNtfCg=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "ggJcPENEYrkDlKP1rUoQNPE0JhM=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "xrt7puz0ZnvNnC32f8nDYJHvCcQ=",
                  "name": "template-1.html",
                },
              ],
              "hash": "kHLkOJ9S2RmK9QsYV4H3vFWRSOY=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "DP1K1CMgX0s13uPyh6DxDf2KDUI=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "hxdjpR//PsLO6dvB4OghA4MkP8A=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "d6KwN3ynLpzapNKcDIf8ytG9yHE=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "TEbaVqLTCYBPiOLO0nll36zByWI=",
              "name": "sample-result-component",
            },
          ],
          "hash": "wLPpWj43ALvIz9yZsp4BFoMBbow=",
          "name": "components",
        },
        HashedFile {
          "hash": "zOAUK2vUx2PHWaGj0Rg/i3tFp7Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "9rxSwzfvOxakEzQoDKgmmtgL2DU=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "URgdqM0tPCISKmuRjgvCOqyX1DA=",
              "name": "index.css",
            },
          ],
          "hash": "/Wql6x/tk4rRNjoyyPKloRvuiGk=",
          "name": "style",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "s62u03kWBMqmtpvRgY8dy/usU/c=",
              "name": "atomic.ts",
            },
          ],
          "hash": "Q9gDKXuZHVN4ikM70Un69oZ/GKg=",
          "name": "utils",
        },
      ],
      "hash": "U5+vyE+XIcINHyRyy8gupuIrRww=",
      "name": "src",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "0pRhSC9k+kvc1pLT71YqLWWkH0c=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using the default page config (pageId not specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "bBk6DoprMUqcw8a48oUQpkyFxkE=",
      "name": "deployment.esbuild.mjs",
    },
    HashedFile {
      "hash": "+t+HILvU+0OvGuKuRvbcamfBMRw=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "dZCPeiAxqOaVVtRsZz+MidfshDs=",
          "name": "clean-up.js",
        },
        HashedFile {
          "hash": "SPggJ4gGqtRc5+8WHpeKd/gQcf0=",
          "name": "utils.js",
        },
      ],
      "hash": "UEgD2PjQu6qgn3nWQVaFnfNtfCg=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "OvDBAuwZSXzJKEDTu2h16xwmS/4=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "OMU1pEfGxxywcokm8aFD8znPyaI=",
                  "name": "template-1.html",
                },
              ],
              "hash": "Dfe37MVrxMYCBJksItHWKh4iFRU=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "DP1K1CMgX0s13uPyh6DxDf2KDUI=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "hxdjpR//PsLO6dvB4OghA4MkP8A=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "d6KwN3ynLpzapNKcDIf8ytG9yHE=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "TEbaVqLTCYBPiOLO0nll36zByWI=",
              "name": "sample-result-component",
            },
          ],
          "hash": "2rr+UEKfg3sYGI7t3rEsd9NaqaI=",
          "name": "components",
        },
        HashedFile {
          "hash": "zOAUK2vUx2PHWaGj0Rg/i3tFp7Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "9rxSwzfvOxakEzQoDKgmmtgL2DU=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "wOz9MvRYciTdXtc2nbTYjdqphzo=",
              "name": "index.css",
            },
          ],
          "hash": "/i4ylsDPXd6unLft/Rk/HO73WHE=",
          "name": "style",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "s62u03kWBMqmtpvRgY8dy/usU/c=",
              "name": "atomic.ts",
            },
          ],
          "hash": "Q9gDKXuZHVN4ikM70Un69oZ/GKg=",
          "name": "utils",
        },
      ],
      "hash": "BbDf+PumRFJhCAZDIzDYgYIWO+8=",
      "name": "src",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "qaUjZxOHtN3/gswBxyhbd1pU00g=",
  "name": "normalizedDir",
}
`;
